@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'application'
 	id 'jvm-test-suite'
-	id 'org.springframework.boot' version '3.5.6'
+	id 'org.springframework.boot' version '4.0.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'maven-publish'
 	id 'jacoco'
@@ -42,15 +42,19 @@ sourceSets {
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(25)
 	}
-	// Note, building on Java 21 but Spring Boot 6 still allows JDK 17 compatibility, so allow for this.
-	sourceCompatibility = '17'
-	targetCompatibility = '17'
+	sourceCompatibility = '25'
+	targetCompatibility = '25'
 }
 
 compileJava {
-	options.compilerArgs << '--add-exports=java.desktop/sun.awt=ALL-UNNAMED'
+	// options.compilerArgs << '--add-exports=java.desktop/sun.awt=ALL-UNNAMED'
+}
+
+tasks.withType(JavaCompile).configureEach {
+	// Needed for IDE builds which fail as Lombok cannot access sun.misc.Unsafe
+	options.forkOptions.jvmArgs << '--sun-misc-unsafe-memory-access=allow'
 }
 
 application {
@@ -64,17 +68,14 @@ configurations {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
+	implementation 'org.springframework.boot:spring-boot-starter-json'
 	implementation 'org.thymeleaf:thymeleaf:3.1.3.RELEASE'
 	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.31'
 	implementation 'io.github.openhtmltopdf:openhtmltopdf-slf4j:1.1.31'
 	implementation ('io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.31') {
 		exclude group: 'commons-io', module: 'commons-io'
 	}
-	implementation 'commons-io:commons-io:2.20.0'
+	implementation 'commons-io:commons-io:2.21.0'
 	implementation 'io.github.openhtmltopdf:openhtmltopdf-core:1.1.31'
 	implementation 'org.jsoup:jsoup:1.21.2'
 	implementation 'org.apache.xmlgraphics:batik-svggen:1.19'
@@ -155,3 +156,4 @@ publishing {
 		}
 	}
 }
+
